# lichess-xlsx-reports

./: Cargo.toml  Containerfile  README.md
.github/assets/: example.xlsx
.github/workflows/: oci.yml
src/: data.rs  lichess.rs  main.rs
src/xlsx/: formatter.rs  mod.rs  report.rs  response.rs  styles.rs  utils.rs
static/: app.js  index.html  style.css
