[package]
name = "chess-report-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = "0.4.43"
pgnparse = "0.1.15"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
umya-spreadsheet = "2.3.3"
